<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.starting.amazingsylhet.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true"
            >
        <ImageView
            app:layout_collapseMode="parallax"
            android:src="@drawable/splashone"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            />
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:title="@string/recent_news"
                app:layout_collapseMode="pin"
                >


            </android.support.v7.widget.Toolbar>



        </android.support.design.widget.CollapsingToolbarLayout>

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="@color/colorho"-->
            <!--app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:padding="12dp"
                    android:textSize="20sp"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="bold"
                    android:text="@string/recent_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!--<LinearLayout-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:padding="12dp"-->
                    <!--&gt;-->
                    <!--<ImageView-->
                        <!--android:contentDescription="@string/app_name"-->
                        <!--android:src="@drawable/ic_clock"-->
                        <!--android:layout_weight="1"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content" />-->
                    <!--<TextView-->
                        <!--android:layout_gravity="center_vertical"-->
                        <!--android:padding="12dp"-->
                        <!--android:textSize="14sp"-->
                        <!--android:textColor="@color/colorPrimaryText"-->
                        <!--android:textStyle="bold"-->
                        <!--android:text="@string/publish_date"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_weight="9"-->
                        <!--android:layout_height="wrap_content" />-->

                <!--</LinearLayout>-->

                <TextView
                    android:padding="12dp"
                    android:textSize="13sp"
                    android:lineSpacingMultiplier="1.5"
                    android:layout_marginTop="12dp"
                    android:text="@string/in_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </android.support.v7.widget.CardView>


    </android.support.v4.widget.NestedScrollView>

    <!--<include layout="@layout/content_main" />-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_fav"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>
